--- a/google-stock-analysis-and-price-prediction.ipynb
+++ b/google-stock-analysis-and-price-prediction.ipynb
@@ -12,10 +12,7 @@
      "status": "completed"
     },
     "tags": []
-   },
-   "source": [
-    "<img src=\"https://devra.ai/analyst/notebook/2290/image.jpg\" style=\"width: 100%; height: auto;\" />"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
@@ -31,7 +28,7 @@
     "tags": []
    },
    "source": [
-    "<div style=\"text-align:center; border-radius:15px; padding:15px; color:white; margin:0; font-family: 'Orbitron', sans-serif; background: #2E0249; background: #11001C; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); overflow:hidden; margin-bottom: 1em;\">    <div style=\"font-size:150%; color:#FEE100\"><b>Google Stock Data Analysis</b></div>    <div>This notebook was created with the help of <a href=\"https://devra.ai/ref/kaggle\" style=\"color:#6666FF\">Devra AI</a></div></div>"
+    "<div style=\"text-align:center; border-radius:15px; padding:15px; color:white; margin:0; font-family: 'Orbitron', sans-serif; background: #2E0249; background: #11001C; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3); overflow:hidden; margin-bottom: 1em;\">    <div style=\"font-size:150%; color:#FEE100\"><b>Google Stock Data Analysis</b></div>    <div> style=\"color:#6666FF\">Devra AI</a></div></div>"
    ]
   },
   {
